fix pipes and spacing

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .gc-section {
-  padding-top: 50px;
+  padding-top: 10px;
 }
 
 .gc-forkme > a {
